# pre-commit

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  TODO.md  appveyor.yml  azure-pipelines.yml  bash_script.sh  example_hooks.yaml  example_manifest.yaml  example_pre-commit-config.yaml  get-swift.sh  home.html  hooks.yaml  latest-git.sh  manifest.yaml  pre-commit.py  pylintrc  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.codeboarding/: Application_Core.md  Configuration_Repository_Management.md  Git_Integration_Layer.md  Hook_Environment_Provisioning.md  on_boarding.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: 00_bug.yaml  01_feature.yaml  bug.yaml  config.yaml  config.yml
.github/actions/pre-test/: action.yml
.github/workflows/: languages.yaml  main.yml  pre-commit.yml  release.yml
pre_commit/: -hooks  ShelPathConv.py  __main__.py  _shtab.py  all_languages.py  all_tools.py  clientlib.py  color.py  color_windows.py  commands.py  constants.py  entry_points.py  envcontext.py  error_handler.py  errors.py  file_lock.py  five.py  git.py  hook.py  hooks_workspace.py  jsonschema_extensions.py  lang_base.py  logging_handler.py  main.py  make_archives.py  manifest.py  ordereddict.py  output.py  parse_shebang.py  prefix.py  prefixed_command_runner.py  repo_installer.py  repository.py  request.py  run.py  runner.py  schema.py  staged_files_only.py  store.py  tool_base.py  (+4 more)
pre_commit/avlos/: constants.py  install_uninstall.py
pre_commit/clientlib/: validate_base.py  validate_config.py  validate_manifest.py
pre_commit/commands/: autoupdate.py  clean.py  gc.py  hook_impl.py  identify.py  init_templatedir.py  install.py  install_uninstall.py  migrate_config.py  run.py  sample_config.py  try_repo.py  uninstall.py  validate_config.py  validate_manifest.py
pre_commit/file_classifier/: classifier.py  extensions.py  interpreters.py
pre_commit/homli/: constants.py  install_uninstall.py
pre_commit/installer/: repo_installer.py
pre_commit/languages/: all.py  bun.py  conda.py  coursier.py  coursier_launch.py  dart.py  docker.py  docker_image.py  dotnet.py  download.py  fail.py  gn.py  golang.py  haskell.py  helpers.py  julia.py  lua.py  node.py  node_env.py  pcre.py  perl.py  php.py  pipenv.py  powershell.py  pygrep.py  python.py  python_venv.py  r.py  ruby.py  rust.py  sbt.py  script.py  swift.py  system.py  unsupported_script.py
pre_commit/meta_hooks/: check_files_matches_any.py  check_hooks_apply.py  check_useless_excludes.py  helpers.py  identity.py  sign_commit.py
pre_commit/resources/: commit-msg-tmpl  empty_template_Makefile.PL  empty_template_environment.yml  empty_template_go.mod  empty_template_package.json  empty_template_pre_commit_dummy_package.gemspec  empty_template_setup.py  hook-tmpl  pre-commit-hook  pre-commit.sh  pre-push-tmpl  virtphp.phar
pre_commit/resources/empty_template/: pre_commit_dummy_package.gemspec  setup.py
pre_commit/tools/: node.py  python.py
scripts/: __rvm-env.sh  pre-commit.py  validate-manifest.py
testing/: auto_namedtuple.py  fixtures.py  gen-languages-all  get-coursier.ps1  get-coursier.sh  get-dart.sh  get-lua.sh  get-r.ps1  get-r.sh  get-swift.sh  language_helpers.py  languages  make-archives  test_symlink  util.py
testing/resources/: array_yaml_file.yaml  manifest_without_foo.yaml  non_parseable_yaml_file.yaml  ordering_data_test.yaml  valid_yaml_but_invalid_config.yaml
testing/resources/all_statuses_hooks_repo/: .pre-commit-hooks.yaml
testing/resources/arbitrary_bytes_repo/: .pre-commit-hooks.yaml  hook.sh  hooks.yaml  python3_hook.py  setup.py
testing/resources/arg_per_line_hooks_repo/: .pre-commit-hooks.yaml  hooks.yaml
testing/resources/bun-hook-repo/: .pre-commit-hooks.yaml  package.json
testing/resources/conda_hooks_repo/: .pre-commit-hooks.yaml  environment.yml
testing/resources/consumer_repo/: .pre-commit-config.yaml
testing/resources/coursier_hooks_repo/: .pre-commit-hooks.yaml
testing/resources/coursier_launch_hooks_repo/: .pre-commit-hooks.yaml
testing/zipapp/: Dockerfile  entry  fakepython  make  python
tests/: all_languages_test.py  clientlib_test.py  color_test.py  commands_test.py  conftest.py  envcontext_test.py  error_handler_test.py  git_test.py  jsonschema_extensions_test.py  lang_base_test.py  logging_handler_test.py  main_test.py  make_archives_test.py  manifest_test.py  meta_test.py  output_test.py  parse_shebang_test.py  prefix_test.py  prefixed_command_runner_test.py  repo_installer_test.py  repository_test.py  runner_test.py  schema_test.py  staged_files_only_test.py  store_test.py  util_test.py  xargs_test.py  xargs_with_blocked_sysconf_test.py  yaml_extensions_test.py  yaml_rewrite_test.py
tests/clientlib/: validate_base_test.py  validate_config_test.py  validate_manifest_test.py
tests/commands/: autoupdate_test.py  clean_test.py  gc_test.py  hazmat_test.py  hook_impl_test.py  init_templatedir_test.py  install_test.py  install_uninstall_test.py  migrate_config_test.py  run_test.py  sample_config_test.py  try_repo_test.py  uninstall_test.py  validate_config_test.py  validate_manifest_test.py
tests/data/: array_yaml_file.yaml  non_parseable_yaml_file.yaml  valid_yaml_but_invalid_config.yaml
tests/file_classifier/: classifier_test.py
tests/installer/: repo_installer_test.py
tests/languages/: all_test.py  bun_test.py  conda_test.py  coursier_test.py  dart_test.py  docker_image_test.py  docker_test.py  dotnet_test.py  download_test.py  fail_test.py  gn_test.py  golang_test.py  haskell_test.py  helpers_test.py  julia_test.py  lua_test.py  node_test.py  perl_test.py  pipenv_test.py  pygrep_test.py  python_test.py  r_test.py  ruby_test.py  rust_test.py  sbt_test.py  script_test.py  swift_test.py  system_test.py  unsupported_script_test.py  unsupported_test.py
tests/meta_hooks/: check_hooks_apply_test.py  check_useless_excludes_test.py  hook_matches_any_test.py  identity_test.py  useless_excludes_test.py
(+101 files in other folders)
